# orne_box_ign_sim

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: robot_localization.yaml
config/orne_box/: slam_toolbox_async.yaml
launch/: ignition_gazebo.launch  run.launch
launch/includes/: localization.launch  ros_ign_bridge.launch  ros_ign_image_bridge.launch
launch/model/: orne_box.launch
launch/visualize/: orne_box_viz.launch
maps/: map_for_costmap.yaml
rviz/: orne_box.rviz
worlds/ignition/: ground_plane.sdf  indoor_and_outdoor.sdf
