<?xml version="1.0"?>
<package format="2">
  <name>orne_box_ign_sim</name>
  <version>0.0.0</version>
  <description>The orne_box_ign_sim package</description>
  <maintainer email="naoki.takahashi060@gmail.com">NaokiTakahashi12</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>orne_box_description</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
